# security-posture-dashboard

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  findings.py  github.py  repos.py  scans.py  users.py
backend/app/core/: config.py
backend/app/models/: __init__.py  repository.py  scan.py  user.py
backend/app/schemas/: finding.py  repository.py  scan.py  user.py
backend/app/services/: github.py  queue.py  remediation.py  risk.py  scorecard.py  tokens.py
backend/app/workers/: __init__.py  scorecard.py  worker.py
docs/: architecture.md  demo-script.md  threat-model.md
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: app-shell.tsx  failed-checks-table.tsx  repo-selector.tsx  score-summary.tsx  suggested-fixes.tsx  trend-panel.tsx
frontend/components/ui/: button-link.tsx
frontend/lib/: api.ts  sample-data.ts  types.ts  ui.ts
infra/: docker-compose.yml
