[project]
name = "security-posture-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the Security Posture Dashboard MVP"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.1",
  "asyncpg>=0.29.0",
  "cryptography>=42.0.8",
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "itsdangerous>=2.2.0",
  "pydantic-settings>=2.3.4",
  "psycopg[binary]>=3.2.1",
  "python-jose[cryptography]>=3.3.0",
  "redis>=5.0.6",
  "rq>=1.16.2",
  "sqlalchemy[asyncio]>=2.0.31",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends"]
